--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,6 +16,9 @@ stages:
       - train.LEARNING_RATE
     outs:
       - models/checkpoint_latest
+    metrics:
+      - plots/train_metrics.json:
+          cache: false
 
   test:
     cmd: python scripts/test_comet_gpt2.py --test_data_path=./data/atomic_test.tsv --models_dir_path=./models/checkpoint_latest --results_dir_path=./results
